{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 285,
  "lineage": "850fa5d6-5ced-b692-e44c-f8b759f3078a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07db7d848501dd640",
            "arn": "arn:aws:ec2:eu-north-1:909200563752:elastic-ip/eipalloc-07db7d848501dd640",
            "association_id": "eipassoc-0b027ca6d82f5a438",
            "domain": "vpc",
            "id": "eipalloc-07db7d848501dd640",
            "instance": "i-08c76ce71da04e9c9",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-0ddefdb80650b55c3",
            "private_dns": "ip-10-10-2-99.eu-north-1.compute.internal",
            "private_ip": "10.10.2.99",
            "public_dns": "ec2-13-53-98-159.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.53.98.159",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Project": "golfbeta",
              "budget-protect": "true"
            },
            "tags_all": {
              "Project": "golfbeta",
              "budget-protect": "true"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d041a2e640771b52",
            "arn": "arn:aws:ec2:eu-north-1:909200563752:instance/i-08c76ce71da04e9c9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "golfbeta-ec2-profile",
            "id": "i-08c76ce71da04e9c9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "golfbeta-admin",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ddefdb80650b55c3",
            "private_dns": "ip-10-10-2-99.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.2.99",
            "public_dns": "ec2-13-53-98-159.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.53.98.159",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cc7c2df1a5d3f379",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f819a5e29e5ab33c",
            "tags": {
              "Name": "golfbeta-ec2",
              "Project": "golfbeta",
              "budget-protect": "true"
            },
            "tags_all": {
              "Name": "golfbeta-ec2",
              "Project": "golfbeta",
              "budget-protect": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0393250cfcba54b98"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_cloudfront_distribution.videos",
            "aws_cloudfront_key_group.videos",
            "aws_cloudfront_origin_access_control.videos",
            "aws_cloudfront_public_key.videos",
            "aws_db_instance.pg",
            "aws_db_subnet_group.db_subnets",
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_s3_bucket.cloudfront_logs",
            "aws_s3_bucket.videos",
            "aws_security_group.ec2_sg",
            "aws_security_group.rds_sg",
            "aws_ssm_parameter.cloudfront_key_pair_id",
            "aws_ssm_parameter.cloudfront_private_key_b64",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_subnet.public_b",
            "aws_vpc.main",
            "data.aws_availability_zones.azs",
            "random_id.videos_suffix",
            "tls_private_key.videos_signing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:909200563752:internet-gateway/igw-0bfc282f640e2ccbb",
            "id": "igw-0bfc282f640e2ccbb",
            "owner_id": "909200563752",
            "tags": {
              "Name": "golfbeta-igw",
              "Project": "golfbeta",
              "budget-protect": "true"
            },
            "tags_all": {
              "Name": "golfbeta-igw",
              "Project": "golfbeta",
              "budget-protect": "true"
            },
            "vpc_id": "vpc-03e4ed7f283b54596"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:909200563752:route-table/rtb-0654d84345d123ec2",
            "id": "rtb-0654d84345d123ec2",
            "owner_id": "909200563752",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bfc282f640e2ccbb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "golfbeta-public-rt",
              "Project": "golfbeta",
              "budget-protect": "true"
            },
            "tags_all": {
              "Name": "golfbeta-public-rt",
              "Project": "golfbeta",
              "budget-protect": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e4ed7f283b54596"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0231dcf1b22249afa",
            "route_table_id": "rtb-0654d84345d123ec2",
            "subnet_id": "subnet-0e6f5d0a4b80bb94b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.main",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0abff68c51054dfd2",
            "route_table_id": "rtb-0654d84345d123ec2",
            "subnet_id": "subnet-0f819a5e29e5ab33c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.main",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:909200563752:security-group/sg-0393250cfcba54b98",
            "description": "Web ingress for app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0393250cfcba54b98",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "18.202.216.48/29"
                ],
                "description": "SSH from eu-north-1 AWS internal",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "82.132.234.136/32"
                ],
                "description": "SSH from your workstation (Tobys iPhone (2))",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "86.150.28.115/32"
                ],
                "description": "SSH from your workstation (1 Hamond Sq)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "golfbeta-ec2-sg",
            "name_prefix": "",
            "owner_id": "909200563752",
            "revoke_rules_on_delete": false,
            "tags": {
              "Project": "golfbeta",
              "budget-protect": "true"
            },
            "tags_all": {
              "Project": "golfbeta",
              "budget-protect": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e4ed7f283b54596"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:909200563752:security-group/sg-00eec9dabf56ee8b5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00eec9dabf56ee8b5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Postgres from EC2 only",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0393250cfcba54b98"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "golfbeta-rds-sg",
            "name_prefix": "",
            "owner_id": "909200563752",
            "revoke_rules_on_delete": false,
            "tags": {
              "Project": "golfbeta",
              "budget-protect": "true"
            },
            "tags_all": {
              "Project": "golfbeta",
              "budget-protect": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e4ed7f283b54596"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:909200563752:subnet/subnet-07847cca03a973c9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.10.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07847cca03a973c9b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "909200563752",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "golfbeta-private-a",
              "Project": "golfbeta",
              "budget-protect": "true"
            },
            "tags_all": {
              "Name": "golfbeta-private-a",
              "Project": "golfbeta",
              "budget-protect": "true"
            },
            "vpc_id": "vpc-03e4ed7f283b54596"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:909200563752:subnet/subnet-06e23bf2fd7319bd5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.10.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e23bf2fd7319bd5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "909200563752",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "golfbeta-private-b",
              "Project": "golfbeta",
              "budget-protect": "true"
            },
            "tags_all": {
              "Name": "golfbeta-private-b",
              "Project": "golfbeta",
              "budget-protect": "true"
            },
            "vpc_id": "vpc-03e4ed7f283b54596"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:909200563752:subnet/subnet-0e6f5d0a4b80bb94b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6f5d0a4b80bb94b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "909200563752",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "golfbeta-public-a",
              "Project": "golfbeta",
              "budget-protect": "true"
            },
            "tags_all": {
              "Name": "golfbeta-public-a",
              "Project": "golfbeta",
              "budget-protect": "true"
            },
            "vpc_id": "vpc-03e4ed7f283b54596"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:909200563752:subnet/subnet-0f819a5e29e5ab33c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f819a5e29e5ab33c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "909200563752",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "golfbeta-public-b",
              "Project": "golfbeta",
              "budget-protect": "true"
            },
            "tags_all": {
              "Name": "golfbeta-public-b",
              "Project": "golfbeta",
              "budget-protect": "true"
            },
            "vpc_id": "vpc-03e4ed7f283b54596"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:909200563752:vpc/vpc-03e4ed7f283b54596",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-024da0f8ce402b9de",
            "default_route_table_id": "rtb-0e526f9eedcaa3807",
            "default_security_group_id": "sg-0bd1c98d5b4c25c46",
            "dhcp_options_id": "dopt-07dae460351920c04",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03e4ed7f283b54596",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e526f9eedcaa3807",
            "owner_id": "909200563752",
            "tags": {
              "Name": "golfbeta-vpc",
              "Project": "golfbeta",
              "budget-protect": "true"
            },
            "tags_all": {
              "Name": "golfbeta-vpc",
              "Project": "golfbeta",
              "budget-protect": "true"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}